# delta-transformation-pipeline

./: .env  README.md  pylintrc  pyproject.toml
data/: processed-book-trade-1.csv  processed-book-trade-10.csv  processed-book-trade-100.csv  processed-book-trade-1000.csv  processed-book-trade-10000.csv
src/common/: constants.py
transform_delta/common/: constants.py
