[tool.poetry]
name = "delta-transformation-pipeline"
version = "0.1.0"
description = "A transformation pipeline for Delta Lake"

license = "GPL-3.0 license"

authors = [
    "C Om Prakash <comprakash@gmail.com>"
]

repository = "https://github.com/python-poetry/poetry"
homepage = "https://python-poetry.org"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]
python = ">=3.11"
requests = { version = "^2.28", extras = ["security"] }


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
my-script = "my_package:main"