[tool.poetry]
name = "delta-transformation-pipeline"
version = "0.1.0"
description = "A transformation pipeline for Delta Lake"
license = "GPL-3.0 license"
authors = ["Om Prakash C <comprakash@gmail.com>"]
readme = ["README.md", "LICENSE"]
packages = [{include = "transform_delta"}]

[tool.poetry.dependencies]
python = "^3.10"
awswrangler = { version = "^3.2.1", extras = ["ray", "modin", "deltalake", "postgres"] }
pyspark = "3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
